[gd_scene load_steps=6 format=3 uid="uid://cu7h0eew86she"]

[ext_resource type="Script" path="res://Assets/Scenes/main_menu.gd" id="1_dy76o"]
[ext_resource type="LabelSettings" uid="uid://cmhtmc70kii0m" path="res://Assets/TitleLabelSettings.tres" id="1_neovj"]
[ext_resource type="PackedScene" uid="uid://dpch8vd55wsiy" path="res://Assets/Scenes/card.tscn" id="2_dvcnj"]
[ext_resource type="Texture2D" uid="uid://bvcm5pa70bll6" path="res://Assets/Textures/felt.png" id="2_g1m8g"]
[ext_resource type="Texture2D" uid="uid://ckitacn7wg1ey" path="res://Assets/Textures/DiamondPatternA.png" id="3_y3yoh"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dy76o")

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(1.15514e-06, 0.636547, 0.362807, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_g1m8g")
expand_mode = 1
stretch_mode = 1

[node name="Pattern" type="TextureRect" parent="Background"]
self_modulate = Color(0, 0, 0, 0.145098)
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_y3yoh")
expand_mode = 1
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.5
offset_right = 35.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Blackjack"
label_settings = ExtResource("1_neovj")
horizontal_alignment = 1

[node name="PlayBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="SettingsBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="RulesBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "How To Play"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Card" parent="." instance=ExtResource("2_dvcnj")]
position = Vector2(320, 176)

[node name="Card2" parent="." instance=ExtResource("2_dvcnj")]
position = Vector2(448, 144)

[node name="Card3" parent="." instance=ExtResource("2_dvcnj")]
position = Vector2(576, 112)

[node name="Card4" parent="." instance=ExtResource("2_dvcnj")]
position = Vector2(704, 144)

[node name="Card5" parent="." instance=ExtResource("2_dvcnj")]
position = Vector2(832, 176)
